# DataEngineerProject

./: README.md  fake_data.py  pyproject.toml  read_aws.py
backend/: app.py
backend/api/: extract.py  transactions.csv
backend/aws/: client.py
backend/contracts/: schema.py
backend/data_source/: api.py
