[project]
name = "dwproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "faker (>=37.4.0,<38.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "boto3 (>=1.39.3,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn backend.api.extract:app --reload"
gen-data = "python fake_data.py"
